--- a/values.yaml
+++ b/values.yaml
@@ -80,7 +80,7 @@ resources: {}
 livenessProbe:
   httpGet:
     path: /
-    port: http
+    port: 5000
 #readinessProbe:
 #  httpGet:
 #    path: /
