--- a/values.yaml
+++ b/values.yaml
@@ -42,8 +42,7 @@ securityContext: {}
 service:
   type: NodePort
   ports:
-    - name: http
-      port: 5000
+    - port: 80
       targetPort: 5000
       protocol: TCP
       nodePort: 30001
